# doctor

./: .gitignore  .pre-commit-config.yaml  Dockerfile.base  LICENSE.md  README.md  docker-compose.yml  implementation_plan.md  llms.txt  pyproject.toml  pytest.ini
.cursor/rules/: code-style.mdc  refactors.mdc  testing.mdc
.github/workflows/: pytest.yml
docs/: maps_api_examples.md
scripts/: bump_version.py
src/common/: __init__.py  config.py  db_setup.py  indexer.py  logger.py  models.py  processor.py  processor_enhanced.py
src/crawl_worker/: Dockerfile  __init__.py  main.py  tasks.py
src/lib/: __init__.py  chunker.py  crawler.py  crawler_enhanced.py  database.py  embedder.py  indexer.py  logger.py  processor.py
src/lib/database/: __init__.py  batch.py  connection.py  connection_pool.py  lock_manager.py  migrations.py  operations.py  schema.py  sync.py  utils.py
src/lib/database/migrations/: 001_add_hierarchy.sql
src/web_service/: Dockerfile  __init__.py  main.py
src/web_service/api/: __init__.py  admin.py  diagnostics.py  documents.py  jobs.py  map.py
src/web_service/services/: __init__.py  admin_service.py  debug_bm25.py  document_service.py  job_service.py  map_service.py
tests/: README.md  __init__.py  conftest.py
tests/api/: test_documents_api.py  test_map_api.py
tests/common/: test_database.py  test_indexer.py  test_processor.py
tests/integration/: conftest.py  test_processor_enhanced.py
tests/integration/common/: __init__.py  test_vector_indexer.py
tests/integration/services/: __init__.py  test_document_service.py
tests/lib/: __init__.py  test_chunker.py  test_crawler.py  test_crawler_enhanced.py  test_database.py  test_database_hierarchy.py  test_embedder.py  test_indexer.py  test_processor.py
tests/services/: __init__.py  test_admin_service.py  test_document_service.py  test_job_service.py  test_map_service.py  test_map_service_legacy.py
