[project]
name = "doctor"
version = "0.2.0"
description = "LLM agent system for discovering, crawling, and indexing web sites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "redis",
    "rq",
    "crawl4ai==0.6.0",
    "langchain-text-splitters",
    "litellm",
    "openai",
    "duckdb",
    "pydantic>=2.0.0",
    "httpx",
    "python-multipart",
    "uuid",
    "fastapi-mcp>=0.3.3",
    "mcp>=1.7.1",
    "nest-asyncio>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.hatch.build.targets.wheel]
# Tell hatch where to find the packages for the 'doctor' project
packages = ["src/common", "src/crawl_worker", "src/web_service", "src/lib"]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
    "coverage>=7.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "async_test: marks tests as asynchronous tests",
]
